# Logwatcher

./: .directory  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  config.h.in  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
config/: logwatcher.conf  logwatcher_files.conf  syslog-ng.example
docs/: authors  changelog  news  readme
other/: PKGBUILD  logwatcher  logwatcher-0.4.7.ebuild  logwatcher.1  logwatcher.conf.1  logwatcher.service
source/: base.c  base.h  conf.c  conf.h  globals.c  globals.h  main.c  net.c  net.h  queue.c  queue.h  watcher.c  watcher.h
