# created by Sven Sperner                  -*- Automake -*-
# Process this file with automake to produce a Makefile.in.

AUTOMAKE_OPTIONS   = dist-bzip2 no-dist-gzip
bin_PROGRAMS       = logwatcher
logwatcher_SOURCES = source/main.c source/base.c source/conf.c source/globals.c source/net.c source/queue.c source/watcher.c
man_MANS           = other/logwatcher.1
EXTRA_DIST         = config docs other
